--- a/css/index.css
+++ b/css/index.css
@@ -40,7 +40,7 @@ h6 {
 /* ===== Navbar ===== */
 
 #nav {
-	background-color: #212529;
+	background-color: #202020;
 }
 
 #nav .navbar-toggler {
@@ -108,7 +108,7 @@ h6 {
 	}
 
 	#nav.navbar-shrink {
-		background-color: #212529;
+		background-color: #202020;
 		padding-top: 0;
 		padding-bottom: 0;
 	}
@@ -133,7 +133,7 @@ h6 {
 	}
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
 	.navbar-brand img {
 		max-width: 175% !important;
   }
@@ -147,15 +147,16 @@ h6 {
 
 header.masthead {
 	color: white;
-	background-color: white;
+	background-color: #202020;
 	text-align: center;
 	/* Specify your landing header image here */
-	background-image: url("/img/about/Irish\ Keys\ Mixed.JPG");
+	/*background-image: url("/img/about/Irish\ Keys\ Mixed.JPG");*/
 	background-repeat: no-repeat;
 	background-attachment: scroll;
 	background-position: center center;
 	background-size: cover;
-	height: 100vh;
+	padding-bottom: 0px !important;
+	/*height: 100vh;*/
 }
 
 header.masthead .heading-text {
@@ -181,6 +182,11 @@ header.masthead .heading-text .heading-main {
 }
 
 @media (min-width: 768px) {
+
+	header.masthead {
+		padding-bottom: 25px !important;
+	}
+
 	header.masthead .heading-text {
 		padding-top: 300px;
 		padding-bottom: 200px;
@@ -200,6 +206,72 @@ header.masthead .heading-text .heading-main {
 	}
 }
 
+@media (min-width: 935px) {
+	.banner-img {
+		content:url("/img/banners/Banner1@2x.png");
+	}
+}
+
+header.masthead .top-banner {
+	padding-top: 20vh !important;
+	padding-bottom: 100px;
+	padding-left: 3px;
+	padding-right: 3px;
+}
+
+
+.down-arrow-wrapper {
+    position: absolute;
+    left: 50%;
+}
+
+.down-arrow {
+    outline: 0;
+    -webkit-transition: background 300ms ease,-webkit-transform 100ms ease;
+    -moz-transition: background 300ms ease,-moz-transform 100ms ease;
+    -o-transition: background 300ms ease,-o-transform 100ms ease;
+    -ms-transition: background 300ms ease,-ms-transform 100ms ease;
+    transition: background 300ms ease,transform 100ms ease;
+    border-radius: 50%;
+    z-index: 10;
+    border: 25px solid;
+    height: 50px;
+    width: 50px;
+    display: block;
+    text-align: center;
+    position: relative;
+    left: -50%;
+	top: -31px;
+	color: white;
+	border-color: #b20007;
+}
+
+@media only screen and (min-width: 0) and (max-width: 768px) {
+    .down-arrow {
+        visibility:hidden;
+    }
+}
+
+.down-arrow:active {
+    -webkit-transform: scale(0.8);
+    -ms-transform: scale(0.8);
+    -moz-transform: scale(0.8);
+    -o-transform: scale(0.8);
+    transform: scale(0.8);
+}
+
+.down-arrow:focus {
+    text-decoration: none;
+}
+
+.ss-navigatedown:before,.ss-navigatedown.right:after {
+    position: absolute;
+    left: -7px;
+    top: -10px;
+	content: '▼';
+    transform: ScaleY(0.75);
+}
+
 /* ===== End Header ===== */
 
 
@@ -207,19 +279,27 @@ header.masthead .heading-text .heading-main {
 /* ===== Page Section ===== */
 
 .page-section {
-	padding: 50px 0;
-	background-color: #333;
+	padding: 25px 0 50px 0;
+	background-color: #282828;
 }
 
 .page-section-alt {
-	background-color: #222;
+	background-color: #202020;
+}
+
+.page-section h1.section-heading {
+	font-size: 70px;
+	font-weight: 700;
+	margin-top: 0;
+	margin-bottom: 25px;
+	color: #e32c2b !important;
 }
 
 .page-section h2.section-heading {
 	font-size: 50px;
 	font-weight: 500;
 	margin-top: 0;
-	margin-bottom: 15px;
+	margin-bottom: 20px;
 	color: #e32c2b !important;
 }
 
@@ -246,10 +326,23 @@ header.masthead .heading-text .heading-main {
 }
 
 @media (max-width: 768px) {
+	.page-section h1.section-heading {
+		font-size: 52px;
+		font-weight: 600;
+	}
+
 	.page-section h2.section-heading {
 		font-size: 44px;
 		font-weight: 400;
 	}
+}
+
+.pad-below {
+	margin-bottom: 25px;
+}
+
+.pad-above {
+	margin-top: 25px;
 }
 
 /* ===== End Page Section ===== */
@@ -270,14 +363,15 @@ header.masthead .heading-text .heading-main {
 
 .product {
     margin: 8px;
-	background: #888;
+	/*background: #888;*/
 }
 
-.product.product-rounded,
-.product.product-rounded .product-img,
+.product.product-rounded .product-img {
+	border-radius: 8px;
+}
 .product.product-rounded .product-img img,
 .product.product-rounded .product-img .product-hover {
-	border-radius: 4px;
+	border-radius: 5px;
 }
 
 .product .product-img-container {
@@ -291,7 +385,7 @@ header.masthead .heading-text .heading-main {
 	margin: 0 auto;
 	cursor: pointer;
     background-color: #fff;
-	border: solid #fff 5px;
+	border: solid #fff 3px;
 }
 
 .product .product-img img {
@@ -316,13 +410,13 @@ header.masthead .heading-text .heading-main {
 .product-caption {
     width: 100%;
 	margin: 0 0 15px;
-	text-align: center;
+	text-align: left;
 }
 
 .product .product-caption * {
     padding: 3px 5px 3px 5px;
     margin-bottom: 0;
-    color: #000;
+    color: white;
 }
 
 .product a:hover {
@@ -347,8 +441,8 @@ header.masthead .heading-text .heading-main {
 }
 
 .product .product-caption-description {
-	color: #333;
-	font-style: italic;
+	color: white;
+	/*font-style: italic;*/
 }
 
 @media (min-width: 767px) {
