Updated Cover Photos
Cover Photos now feature the logo with a 3D printed look

--- a/css/index.css
+++ b/css/index.css
@@ -212,7 +212,7 @@ header.masthead .top-banner {
 
 @media (max-width: 935px) {
 	.banner-img {
-		content:url("/img/banners/Banner.jpg");
+		content:url("/img/banners/Banner_3D.jpg");
 	}
 
 	header.masthead .top-banner {
